--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-template",
+  "name": "andacolloteencanta",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,7 @@
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
+    "dir-archiver": "^1.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.4",
@@ -21,6 +22,7 @@
   "scripts": {
     "dev": "npx webpack --config dev.config.js --mode development --watch",
     "webpack:dev": "npx webpack --config dev.config.js --mode development",
-    "webpack:prod": "npx webpack --config prod.config.js --mode production"
+    "webpack:prod": "npx webpack --config prod.config.js --mode production",
+    "build": "dir-archiver --src . --dest ../andacolloteencanta.zip --exclude node_modules vendor .git .vscode assets build .gitignore acf-export-2021-06-10.json composer.json composer.lock dev.config.js funciones-viejas.php hierarchy.txt package.json package-lock.json prod.config.js README.md"
   }
 }
