--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^8.2.3",
+    "browser-sync": "^2.27.7",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "dir-archiver": "^1.2.0",
@@ -15,6 +17,7 @@
     "mini-css-extract-plugin": "^2.4.4",
     "node-sass": "^6.0.1",
     "node-sass-svg": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "sass-loader": "^12.3.0",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1"
