--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "node-sass": "^6.0.1",
     "node-sass-svg": "^2.0.0",
     "npm-run-all": "^4.1.5",
+    "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1"
   },
