--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.64.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-manifest-plugin": "^4.0.2"
   },
   "scripts": {
     "dev": "npx webpack --config dev.config.js --mode development --watch",
     "webpack:dev": "npx webpack --config dev.config.js --mode development",
     "webpack:prod": "npx webpack --config prod.config.js --mode production",
-    "build": "dir-archiver --src . --dest ../andacolloteencanta.zip --exclude node_modules vendor .git .vscode assets build .gitignore acf-export-2021-06-10.json composer.json composer.lock dev.config.js funciones-viejas.php hierarchy.txt package.json package-lock.json prod.config.js README.md"
+    "build": "dir-archiver --src . --dest ../andacolloteencanta.zip --exclude src node_modules vendor .git .vscode assets build .gitignore acf-export-2021-06-10.json composer.json composer.lock dev.config.js funciones-viejas.php hierarchy.txt package.json package-lock.json prod.config.js README.md"
   }
 }
