--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "style-loader": "3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "5.64.0",
-    "webpack-cli": "4.9.1",
+    "webpack-cli": "^4.9.1",
     "webpack-manifest-plugin": "4.0.2"
   },
   "scripts": {
